--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
+    "@mantine/carousel": "^6.0.10",
     "@mantine/core": "^6.0.4",
     "@mantine/form": "^6.0.4",
     "@mantine/hooks": "^6.0.4",
+    "@mantine/notifications": "^6.0.10",
     "@reduxjs/toolkit": "^1.9.3",
     "@tabler/icons-react": "^2.14.0",
     "axios": "^1.3.4",
+    "embla-carousel-react": "^8.0.0-rc03",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
