--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mantine/core": "^6.0.4",
     "@mantine/form": "^6.0.4",
     "@mantine/hooks": "^6.0.4",
+    "@mantine/modals": "^6.0.11",
     "@mantine/notifications": "^6.0.10",
     "@reduxjs/toolkit": "^1.9.3",
     "@tabler/icons-react": "^2.14.0",
